--- a/codigo/public/modulos/secaodetuturial/AbaTutoriais.html
+++ b/codigo/public/modulos/secaodetuturial/AbaTutoriais.html
@@ -19,10 +19,10 @@
       <span></span>
     </div>
     <ul id="menu-list">
-      <li><a href="../index.html">Home</a></li>
-      <li><a href="AbaTutoriais.html" target="_blank">Tutoriais</a></li>
-      <li><a href="../conquistas.html" target="_blank">Conquistas</a></li>
-      <li><a href="../modulos/aba-gerenciarsenhas/gerenciarsehas.html" target="_blank">Suas Senhas</a></li>
+      <li><a href="../../index.html">Home</a></li>
+      <li><a href="AbaTutoriais.html">Tutoriais</a></li>
+      <li><a href="../../conquistas.html" target="_blank">Conquistas</a></li>
+      <li><a href="../aba-gerenciarsenhas/gerenciarsehas.html" target="_blank">Suas Senhas</a></li>
       <li><button id="btnLogout" class="btn btn-danger">Sair</button></li>
     </ul>
   </nav>
